infrastructure/k8s/order/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: order-deployment
  namespace: prod-ms-order
  labels: 
    app: order
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: order
  template: 
    metadata:
      labels:
        app: order
    spec:
      containers: 
        - name: order
          image: dockeriheme/order
          resources:  
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "228Mi"
              cpu: "1000m"
          ports: 
            - containerPort: 3001
