infrastructure/k8s/order/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: prod-ms-order
  labels:
    app : order
spec:
  selector:
    app: order
  ports:
  - port: 3001
    protocol: TCP
  type: NodePort
